--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
+     "emitDecoratorMetadata": true, 
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2020",
@@ -21,7 +22,21 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+ "paths": {
+  "models": [
+    "dist/models",                              
+    "projects/models/src/public-api.ts"        
+  ],
+  "shared-services": [
+    "dist/shared-services",
+    "projects/shared-services/src/public-api.ts"
+  ],
+  "ui-components": [
+    "dist/ui-components",
+    "projects/ui-components/src/public-api.ts"
+  ]
+}
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
